# navbot_ws

./: .gitignore  LICENSE  README.md
src/my_navbot_bringup/: CMakeLists.txt  package.xml
src/my_navbot_bringup/config/: auto_nav_params.yaml  gazebo_bridge.yaml  nav_params.yaml
src/my_navbot_bringup/launch/: auto_slam.launch.py  my_navbot_gazebo.launch.py  my_navbot_gazebo.launch.xml  nav.launch.py  slam.launch.py
src/my_navbot_bringup/maps/: new_map.pgm  new_map.yaml  test_map.pgm  test_map.yaml
src/my_navbot_bringup/worlds/: empty.sdf  old_test_world.sdf  test_world.sdf
src/my_navbot_description/: CMakeLists.txt  package.xml
src/my_navbot_description/launch/: display.launch.py  display.launch.xml
src/my_navbot_description/rviz/: navbot_config.rviz  navbot_slam_config.rviz  rviz_config.rviz
src/my_navbot_description/urdf/: camera.xacro  common_properties.xacro  depth_camera.xacro  lidar.xacro  my_navbot.urdf.xacro  my_navbot_core.xacro  my_navbot_gazebo.xacro
src/my_navbot_interfaces/: CMakeLists.txt  package.xml
src/my_navbot_interfaces/msg/: ObjectTracker.msg
src/my_navbot_interfaces/srv/: SetPose.srv
src/my_navbot_tools/: package.xml  setup.cfg  setup.py
src/my_navbot_tools/config/: waypoints.yaml
src/my_navbot_tools/my_navbot_tools/: current_position.py  my_map_saver.py  nav2_mapping.py  nav2_mapping_cluster.py  nav2_mapping_cluster_beta.py  nav_to_pose_client.py  object_detector.py  object_tracker.py  path_validation.py  waypoints_patrol.py
