<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_navbot_tools</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="saeedharb00@gmail.com">ts</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>my_navbot_interfaces</depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-cv2</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
